# tickaido-backend

./: .dockerignore  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  backup_20251001_155000.sql  compose.debug.yml  compose.test.yml  compose.yml  current_schema.sql  logging.conf  openapi.yaml  pyproject.toml  pytest.ini  redocly.yaml  simple_mcp_test.py  test_auth_flow.py  test_clerk_connection.py  test_clerk_service.py  test_mcp_client.py  test_unified_webhook.py
.cursor/rules/: test-scripts-temp-folder.mdc  use-modern-docker-command-format.mdc  use-poetry-for-packages.mdc
alembic/: env.py
alembic/migrations_archive_20251001_155052/: 5231d130ac17_add_clerk_integration_clerk_id_clerk_.py  unified_storage_agent_avatar.py  (+5 more)
app/: celery_app.py  database.py  dependencies.py  main.py
docs/: Authorization_Token_Flow_Diagram.md  INITIAL.md  MCP_Tool_Execution_Analysis.md  README.md  SSO-register.md  agent-knowledge-integration.md  ai-support-frontend.md  ai-ticket-creator-backend.md  bulk-operations.md  ci-cd-deployment.md  create-ticket.md  http-debug-logging-prp.md  in-process-attachment.md  jira-official-library-migration.md  jira-package-support.md  mcp-pydantic-ai-refactor-prp.md  member-management-prd.md  openapi_with_agents.json  stripe-subscription-management-prp.md  support-attachments-phase1.md  support-attachments-phase2.md  support-attachments-threads-messages.md  system-data-flows-architecture.md  ticket-activity.md  tool-list.md
mcp_client/: authenticated_client.py  client.py  tool_filter.py
mcp_server/: Dockerfile  auth_server.py  start_mcp_server.py
migrations/: env.py
scripts/: README.md  backfill_org_domains.py  docs.sh  extract_file_ids.py  hard_delete_files.py  test_auth_flow.py
test_files/: new_vision_test.txt  test_image.txt
tests/: __init__.py  test_ai_agents.py  test_ai_agents_simple.py  test_ai_analysis_service.py  test_api_basic.py  test_api_endpoints.py  test_api_url_responses.py  test_celery_tasks.py  test_clerk_integration.py  test_docker_validation.py  test_document_parser_service.py  test_file_attachment_integration.py  test_file_deleted_behavior.py  test_file_processing_integration.py  test_file_url_enhancement.py  test_file_url_enhancement_implementation.py  test_integration_comprehensive.py  test_mcp_server.py  test_ocr_service.py  test_real_ml_functionality.py  test_services.py  test_simple.py  test_transcription_service.py  test_vision_analysis_service.py  test_websocket_protocols.py  validate_unified_storage.py
(+301 files in other folders)
